# n8n-agentic-workflows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
01-rag-retrieval-with-citations/: README.md  workflow.json
02-self-correcting-agent/: README.md  workflow.json
03-structured-extraction-with-retry/: README.md  workflow.json
04-llm-router/: README.md  workflow.json
05-fallback-model-on-error/: README.md  workflow.json
06-evaluation-gate-before-publish/: README.md  workflow.json
07-lead-enrichment-pipeline/: README.md  workflow.json
08-support-agent-human-escalation/: README.md  workflow.json
09-idempotent-webhook-gateway/: README.md  workflow.json
10-financial-reconciliation-agent/: README.md  workflow.json
11-scheduled-data-migration/: README.md  workflow.json
12-competitive-monitoring/: README.md  workflow.json
13-llm-evaluation-harness/: README.md  workflow.json
14-content-moderation-pipeline/: README.md  workflow.json
15-multimodal-doc-understanding/: README.md  workflow.json
16-multi-step-research-agent/: README.md  workflow.json
17-tool-using-agent/: README.md  workflow.json
18-code-review-assistant/: README.md  workflow.json
19-multi-agent-intake-triage/: README.md  workflow.json
20-long-running-agent-supervisor/: README.md  workflow.json
21-memory-backed-account-copilot/: README.md  workflow.json
22-incident-runbook-agent/: README.md  workflow.json
23-human-approval-tool-agent/: README.md  workflow.json
27-revenue-pipeline-coach/: README.md  (+1 more)
(+58 files in other folders)
